# k8s_rust_example

./: .dockerignore  Cargo.toml  Dockerfile  README.md
k8s/: deployment.yml  service.yml
src/: main.rs
