[package]
name = "rust_hello"
version = "0.1.0"
authors = ["梅 <luz.v@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gethostname = "0.2.0"
actix-web = "1.0.7"
serde_json = "1.0.40"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

